[gd_scene load_steps=4 format=2]

[ext_resource path="res://Proportions/Proportions.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/UbuntuMono_Nerd_Font_Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = SubResource( 1 )

[node name="Proportions" type="Node"]
script = ExtResource( 1 )

[node name="Silo1" type="VSplitContainer" parent="."]
margin_left = 100.86
margin_top = 73.8101
margin_right = 346.86
margin_bottom = 468.81
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Red" type="ColorRect" parent="Silo1"]
margin_right = 246.0
margin_bottom = 191.0
size_flags_vertical = 3
color = Color( 1, 0, 0, 1 )

[node name="Silo2" type="VSplitContainer" parent="Silo1"]
margin_top = 203.0
margin_right = 246.0
margin_bottom = 395.0
size_flags_vertical = 3

[node name="Green" type="ColorRect" parent="Silo1/Silo2"]
margin_right = 246.0
margin_bottom = 90.0
size_flags_vertical = 3
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Silo3" type="VSplitContainer" parent="Silo1/Silo2"]
margin_top = 102.0
margin_right = 246.0
margin_bottom = 192.0
size_flags_vertical = 3

[node name="Blue" type="ColorRect" parent="Silo1/Silo2/Silo3"]
margin_right = 246.0
margin_bottom = 39.0
size_flags_vertical = 3
color = Color( 0, 0, 1, 1 )

[node name="Black" type="ColorRect" parent="Silo1/Silo2/Silo3"]
margin_top = 51.0
margin_right = 246.0
margin_bottom = 90.0
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="ChangeToMain" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -31.0
margin_right = 84.0
custom_fonts/font = SubResource( 2 )
text = "Retour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedQuantity" type="Label" parent="."]
margin_left = 440.007
margin_top = 91.5689
margin_right = 524.007
margin_bottom = 116.569
custom_fonts/font = SubResource( 2 )
text = "Rouge :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenQuantity" type="Label" parent="."]
margin_left = 441.196
margin_top = 129.624
margin_right = 513.196
margin_bottom = 154.624
custom_fonts/font = SubResource( 2 )
text = "Vert :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueQuantity" type="Label" parent="."]
margin_left = 438.817
margin_top = 172.435
margin_right = 510.817
margin_bottom = 197.435
custom_fonts/font = SubResource( 2 )
text = "Bleu :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackQuantity" type="Label" parent="."]
margin_left = 437.628
margin_top = 214.057
margin_right = 509.628
margin_bottom = 239.057
custom_fonts/font = SubResource( 2 )
text = "Noir :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 436.439
margin_top = 407.898
margin_right = 556.439
margin_bottom = 432.898
custom_fonts/font = SubResource( 2 )
text = "RÃ©sultat :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorResult" type="ColorRect" parent="."]
margin_left = 642.172
margin_top = 365.087
margin_right = 760.172
margin_bottom = 478.087
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="dragged" from="Silo1" to="." method="_on_Silo1_dragged"]
[connection signal="dragged" from="Silo1/Silo2" to="." method="_on_Silo2_dragged"]
[connection signal="dragged" from="Silo1/Silo2/Silo3" to="." method="_on_Silo3_dragged"]
[connection signal="pressed" from="ChangeToMain" to="." method="_on_ChangeToMain_pressed"]
